--- a/react-test/src/SearchButton.css
+++ b/react-test/src/SearchButton.css
@@ -1,3 +1,27 @@
-.SearchButton-border {
-  border: solid 1px blue;
+.searchbar {
+  width: 90%;
+  height: 100px;
+  border: none;
+  padding: 25px;
+  font-size: 3em;
+  float: left;
+}
+
+.searchbutton {
+  height: 100px;
+  width: 125px;
+  float: right;
+  position: sticky;
+  border: none;
+  border-left: solid 1px black;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.width100 {
+  margin: auto;
 }
