--- a/react-test/src/index.css
+++ b/react-test/src/index.css
@@ -2,4 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  text-align: center;
+  color: white;
+  background: rgb(0,255,164);
+  background: linear-gradient(90deg, rgba(0,255,164,1) 0%, rgba(0,212,255,1) 100%);
 }
