modifies App.css and App.js

--- a/react-test/src/App.css
+++ b/react-test/src/App.css
@@ -46,8 +46,8 @@ div, button {
   border: solid 1px white;
 }
 
-.bg-clear {
-  background-color: pink;
+.bg-white {
+  background-color: white;
 }
 
 .text-black {
